[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["fortunto2 <info@3dstr.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
